# api/src/controllers/v1/user-controller.ts
@@ -7,35 +7,49 @@ import {
   Path,
   Tags,
   SuccessResponse,
+  Put,
+  Delete,
 } from "tsoa";
-import { getCustomRepository } from "typeorm";
 import { User } from "../../entities/user";
 import { provideSingleton, inject } from "../../middlewares/inversify/ioc-util";
-import { UserRepository } from "../../repositories/user-repository";
 import { UserService } from "../../services/user-service";
 
 @Route("users")
 @Tags("user")
 @provideSingleton(UserController)
 export class UserController extends Controller {
-  // private userService: UserService;
-  private userRepository = getCustomRepository(UserRepository);
   @inject(UserService) private userService: UserService;
 
   constructor() {
     super();
-    // console.log("UserController constructor"); OK
     this.userService = new UserService();
   }
 
-  // @Post()
-  // @SuccessResponse(200, "Create User")
-  // async createUser(@Body() requestBody: User): Promise<User> {
-  //   return this.userRepository.save(requestBody);
-  // }
+  @Get()
+  public async getAllUsers(): Promise<User[]> {
+    return this.userService.getAllUsers();
+  }
+
+  @Get("{id}")
+  public async getUserById(@Path() id: number): Promise<User> {
+    return this.userService.getUserById(id);
+  }
+
   @Post()
-  @SuccessResponse(200, "Create User")
-  async createUser(@Body() requestBody: User): Promise<User> {
-    return this.userService.createUser(requestBody);
+  public async createUser(@Body() user: Partial<User>): Promise<User> {
+    return this.userService.createUser(user);
+  }
+
+  @Put("{id}")
+  public async updateUser(
+    @Path() id: number,
+    @Body() user: Partial<User>
+  ): Promise<User> {
+    return this.userService.updateUser(id, user);
+  }
+
+  @Delete("{id}")
+  public async deleteUser(@Path() id: number): Promise<void> {
+    return this.userService.deleteUser(id);
   }
 }
